--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-markdown": "^8.0.3",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
-    "remark-breaks": "^3.0.2"
+    "remark-breaks": "^3.0.2",
+    "remark-gfm": "^3.0.1"
   },
   "scripts": {
     "predeploy": "npm run build",
